# WorkTools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml
docs/: README.md  calculus-learning-notes.md
docs/superpowers/plans/: 2026-07-02-markdown-url-tool.md  2026-07-02-word-merge-tool.md  2026-07-02-word-to-markdown-tool.md
docs/superpowers/specs/: 2026-07-02-markdown-url-tool-design.md  2026-07-02-word-merge-tool-design.md  2026-07-02-word-to-markdown-tool-design.md
scripts/: README.md
src/worktools/: __init__.py  __main__.py  markdown_url.py  web_to_markdown.py  word_merge.py  word_merge_cli.py  word_to_markdown.py  word_to_markdown_cli.py
tests/: test_markdown_url_cli.py  test_package.py  test_web_to_markdown.py  test_word_merge.py  test_word_to_markdown.py
