[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "worktools"
version = "0.1.0"
description = "Small Python tools for improving daily work efficiency."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "WorkTools contributors" }
]
dependencies = [
  "beautifulsoup4>=4.12",
  "markdownify>=0.13",
  "python-docx>=1.1",
  "requests>=2.32",
  "trafilatura>=1.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
